[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "^3.0.0"
axum = "^0.4.3"
csv = "1.1.6"
itertools = "0.10.3"
reqwest = "0.11.8"
select = "0.5.0"
slab = "0.4.5"
thiserror = "1.0.30"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1.29"
tracing-subscriber = {version = "0.3.5", features = ["env-filter"]}
